--- a/kc.html
+++ b/kc.html
@@ -1,8 +1,8 @@
 <html>
   <head>
-    
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <p>hello world</p>
+    <p>git hub practice</p>
   </body>
 </html>
